objects/Partner_Contact_Certification__c.object
<CustomObject>
    <fields>
        <fullName>CERT_ID__c</fullName>
        <description>Unique Partner Contact Certification Id from Contact SOR</description>
        <externalId>true</externalId>
        <label>CERT_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Certification_Code__c</fullName>
        <description>Partner contact certification qual code</description>
        <label>Certification Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Effective_End_Date__c</fullName>
        <description>Partner contact certification end date</description>
        <label>Certification Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_Effective_Start_Date__c</fullName>
        <description>Partner contact certification start date</description>
        <label>Certification Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_Status__c</fullName>
        <description>Identifies of certification is Active or Inactive</description>
        <label>Certification Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Type__c</fullName>
        <label>Certification Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Partner Provided Contact Name</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Career Certification</relationshipLabel>
        <relationshipName>Partner_Contact_Certifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <customHelpPage>HelpPartnerContactCertification</customHelpPage>
    <description>This object is created to store the details for the Partner Contact Certification</description>
    <label>Partner Contact Certification</label>
    <nameField>
        <label>Partner Contact Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Contact Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>